loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:7: error: illegal start of simple expression
  else if() {
          ^LoopFor:16: error: ')' expected but '}' found.
	}
        ^